--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Nunito+Sans:wght@700;800;900&display=swap" rel="stylesheet">
     <title>Burgers</title>
 </head>
 <body>
@@ -25,6 +25,52 @@
 
         </div>
     </div>
+    <div class="promo">
+        <div class="container">
+            <div class="promo-left">
+                <p class="sale">Скидка</p>
+                <p class="cost">-20%</p>
+                <p class="description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки именинникам</p>
+            </div>
+            <div class="promo-right">
+                <p class="free">Бесплатно</p>
+                <p class="description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a href="#" class="order">заказать</a>
+            </div>
+        </div>
+    </div>
+   <footer class="footer">
+       <div class="container">
+           <div class="item">
+               <img class="logo" src="images/icon/Icon.svg" alt="">
+           </div>
+           <div class="item">
+               <h2>основные ссылки</h2>
+               <ul>
+                   <li><a href="">Меню</a></li>
+                   <li><a href="">Заказ и Доставка</a></li>
+                   <li><a href="">Методы оплаты</a></li>
+                   <li><a href="">Контакты</a></li>
+               </ul>
+           </div>
+           <div class="item">
+               <h2>основная информация</h2>
+               <ul>
+                   <li>Время
+                    <span>ПН - ВС<br>11:00 - 22:00 без перерывов</span>
+                </li>
+                <li>Адрес<span>Москва, ул. Тверская, 5, вход со двора</span></li>
+               </ul>
+            </div>
+               <div class="tel">
+               <ul>
+                   <li>+ 7 900 787 13-13</li>
+                   <li>+ 7 900 700 14-14</li>
+               </ul>
+            </div>
+           
+       </div>
+   </footer>
     
 </body>
 </html>
